# DiskAnalyzer

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  client.cpp  main.cpp
.github/workflows/: RunTests.yml  StaticAnalysis.yml
client/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake
scripts/: build.sh  clang-format.sh  clang-tidy.sh
server/: CMakeLists.txt  assert.hpp  filesystem.cpp  filesystem.hpp  log.cpp  log.hpp  main.cpp  task.hpp  task_manager.cpp  task_manager.hpp  thread_pool.cpp  thread_pool.hpp  unordered_map.hpp  util.cpp  util.hpp
shared/: CMakeLists.txt  config.hpp  socket.cpp  socket.hpp
tests/: CMakeLists.txt  filesystem_test.cpp  simple_cli_test.cpp  thread_pool_test.cpp
